Troubleshoot nav bar toggler not showing, changed to nav bar dark, no longer personolised

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,10 +32,7 @@ background-color: white;
   width: 100%;
    z-index: 999;
 }
-.navbar-toggler-icon{
-    background-color: pink;
-    border: 1px solid 
-}
+
 .navbar-brand:hover{
    color: #92B1AF; 
 }
